# url-shortener

./: Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
url_shortener/: __init__.py  commands.py  forms.py  models.py  routes.py  utils.py
url_shortener/templates/: base.html  home.html
